--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <img src="assets/images/icons/audio_icon.png">
                     <div>
                         <span>AF_Customs_Gateway_Intel.mp3</span>
-                        <audio controls>
+                        <audio controls preload="metadata">
                             <source src="assets/audio/AF_Customs_Gateway_Intel_14-03-2025.mp3" type="audio/mpeg">
                         </audio>
                     </div>
@@ -172,7 +172,7 @@
                     <img src="assets/images/icons/audio_icon.png">
                     <div>
                         <span>AF_The_Brick_Crisis_Log.mp3</span>
-                        <audio controls>
+                        <audio controls preload="metadata">
                             <source src="assets/audio/AF_The_Brick_Crisis_25-07-2025.mp3" type="audio/mpeg">
                         </audio>
                     </div>
