--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
 
             <!-- Adicionada a classe 'file-grid-layout' para alinhar os ícones corretamente -->
-            <div class="window-content file-grid-layout">
+            <div class="window-content file-item">
 
                 <!-- Arquivo 1: Perfil Biográfico -->
                 <div class="file-item" onclick="openPDF('AF_BIOGRAPHICAL_PROFILE.pdf')">
@@ -191,7 +191,7 @@
             </div>
 
             <!-- NÍVEL RAIZ DA PASTA -->
-            <div id="view-root" class="window-content file-grid-layout">
+            <div id="view-root" class="window-content file-item">
                 <!-- Pasta Finch -->
                 <div class="file-item folder-item" onclick="openSubfolder('view-finch', '/Finch_CCA_Sale')">
                     <img src="assets/images/icons/folder_icon.png">
@@ -347,9 +347,7 @@
             </div>
 
             <!-- Adicione a classe file-grid-layout aqui embaixo -->
-            <div class="window-content file-grid-layout">
-                <div class="window-content">
-
+            <div class="window-content file-item">
                     <!-- Arquivo 1: Road Safety -->
                     <div class="file-item" onclick="window.open('TL_pt_road_safety.html', '_blank')">
                         <img src="assets/images/icons/html_icon.png">
