--- a/index.html
+++ b/index.html
@@ -75,13 +75,20 @@
                 <span>Active Projects</span>
             </div>
 
-            <!-- 7. Contingency (Áudios) -->
+            <!-- 7: Gestão de Crise (Bloqueado) -->
+            <div class="desktop-icon locked" onclick="triggerBiometricError('Crisis Management')">
+                <img src="assets/images/icons/folder_icon.png" alt="Folder">
+                <span>Crisis Management</span>
+                <span class="lock-icon">🔒</span>
+            </div>
+
+            <!-- 8. Contingency (Áudios) -->
             <div class="desktop-icon target-folder" onclick="openWindow('win-contingency')">
                 <img src="assets/images/icons/folder_icon.png" alt="Folder">
                 <span>Contingency</span>
             </div>
 
-            <!-- 8. Saved HTML -->
+            <!-- 9. Saved HTML -->
             <div class="desktop-icon target-folder" onclick="openWindow('win-saved-html')">
                 <img src="assets/images/icons/folder_icon.png" alt="Folder">
                 <span>Saved HTML</span>
