--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                 <span>Contingency</span>
             </div>
 
-            <!-- 9. Saved HTML 
+            <!-- 9. Saved HTML  -->
             <div class="desktop-icon target-folder" onclick="openWindow('win-saved-html')">
                 <img src="assets/images/icons/folder_icon.png" alt="Folder">
                 <span>Saved HTML</span>
             </div>
-            -->
+        
 
         </div>
 
@@ -103,11 +103,7 @@
             <span>Secure Link Shared_Cloud with CS</span>
         </div>
 
-        <!--  Saved HTML -->
-        <div class="desktop-icon icon-right" onclick="openWindow('win-saved-html')">
-            <img src="assets/images/icons/folder_icon.png" alt="Folder">
-            <span>Saved HTML</span>
-        </div>
+       
 
 
 
